feat: implement AWS S3 service and object handling classes